jlamontSC-test/src/objects/Reservation__c.object
<CustomObject>
    <description>Club Resv data</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Log_ID__c</fullName>
        <label>Log ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reservations (Party Account Name)</relationshipLabel>
        <relationshipName>PartyMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Party_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reservations (Party Name)</relationshipLabel>
        <relationshipName>PartyMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reservation_Status_Date__c</fullName>
        <description>From Resv date associated with ResvStatus value (if signed up, signup date; if cancelled, cancel date; if transfer, transfer date; if waitlist, waitlist date</description>
        <inlineHelpText>From Resv date associated with ResvStatus value (if signed up, signup date; if cancelled, cancel date; if transfer, transfer date; if waitlist, waitlist date</inlineHelpText>
        <label>Reservation Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reservation_Status__c</fullName>
        <label>Reservation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signed Up</fullName>
                </value>
                <value>
                    <fullName>Transferred Out</fullName>
                </value>
                <value>
                    <fullName>Wait List</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trip_Area_1__c</fullName>
        <label>Trip Area 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Big Sur</fullName>
                </value>
                <value>
                    <fullName>Blue Ridge Mountains</fullName>
                </value>
                <value>
                    <fullName>Brooks Range</fullName>
                </value>
                <value>
                    <fullName>Canadian Arctic</fullName>
                </value>
                <value>
                    <fullName>Chimney Rock Hist Area</fullName>
                </value>
                <value>
                    <fullName>Colorado River</fullName>
                </value>
                <value>
                    <fullName>De Long Mountains</fullName>
                </value>
                <value>
                    <fullName>Finger Lakes</fullName>
                </value>
                <value>
                    <fullName>Kananaskis</fullName>
                </value>
                <value>
                    <fullName>Lake Tahoe Area</fullName>
                </value>
                <value>
                    <fullName>Marin County</fullName>
                </value>
                <value>
                    <fullName>Martha&apos;s Vineyard</fullName>
                </value>
                <value>
                    <fullName>Mt. Agamenticus</fullName>
                </value>
                <value>
                    <fullName>North Maine Woods</fullName>
                </value>
                <value>
                    <fullName>Nunavut Territory</fullName>
                </value>
                <value>
                    <fullName>Owyhee-Bruneau Canyonland</fullName>
                </value>
                <value>
                    <fullName>Ozarks</fullName>
                </value>
                <value>
                    <fullName>Prince William Sound</fullName>
                </value>
                <value>
                    <fullName>Red River Gorge</fullName>
                </value>
                <value>
                    <fullName>Richardson Mountains</fullName>
                </value>
                <value>
                    <fullName>Riverside Park</fullName>
                </value>
                <value>
                    <fullName>South Florida</fullName>
                </value>
                <value>
                    <fullName>Stehekin Valley</fullName>
                </value>
                <value>
                    <fullName>Suwannee</fullName>
                </value>
                <value>
                    <fullName>Lake Tahoe</fullName>
                </value>
                <value>
                    <fullName>Talkeetna Mountains</fullName>
                </value>
                <value>
                    <fullName>TetonS</fullName>
                </value>
                <value>
                    <fullName>Cottonwoodpoint</fullName>
                </value>
                <value>
                    <fullName>Diablo Range</fullName>
                </value>
                <value>
                    <fullName>Monticello</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trip_Area_2__c</fullName>
        <label>Trip Area 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Big Sur</fullName>
                </value>
                <value>
                    <fullName>Blue Ridge Mountains</fullName>
                </value>
                <value>
                    <fullName>Brooks Range</fullName>
                </value>
                <value>
                    <fullName>Canadian Arctic</fullName>
                </value>
                <value>
                    <fullName>Chimney Rock Hist Area</fullName>
                </value>
                <value>
                    <fullName>Colorado River</fullName>
                </value>
                <value>
                    <fullName>De Long Mountains</fullName>
                </value>
                <value>
                    <fullName>Finger Lakes</fullName>
                </value>
                <value>
                    <fullName>Kananaskis</fullName>
                </value>
                <value>
                    <fullName>Lake Tahoe Area</fullName>
                </value>
                <value>
                    <fullName>Marin County</fullName>
                </value>
                <value>
                    <fullName>Martha&apos;s Vineyard</fullName>
                </value>
                <value>
                    <fullName>Mt. Agamenticus</fullName>
                </value>
                <value>
                    <fullName>North Maine Woods</fullName>
                </value>
                <value>
                    <fullName>Nunavut Territory</fullName>
                </value>
                <value>
                    <fullName>Owyhee-Bruneau Canyonland</fullName>
                </value>
                <value>
                    <fullName>Ozarks</fullName>
                </value>
                <value>
                    <fullName>Prince William Sound</fullName>
                </value>
                <value>
                    <fullName>Red River Gorge</fullName>
                </value>
                <value>
                    <fullName>Richardson Mountains</fullName>
                </value>
                <value>
                    <fullName>Riverside Park</fullName>
                </value>
                <value>
                    <fullName>South Florida</fullName>
                </value>
                <value>
                    <fullName>Stehekin Valley</fullName>
                </value>
                <value>
                    <fullName>Suwannee</fullName>
                </value>
                <value>
                    <fullName>Lake Tahoe</fullName>
                </value>
                <value>
                    <fullName>Talkeetna Mountains</fullName>
                </value>
                <value>
                    <fullName>TetonS</fullName>
                </value>
                <value>
                    <fullName>Cottonwoodpoint</fullName>
                </value>
                <value>
                    <fullName>Diablo Range</fullName>
                </value>
                <value>
                    <fullName>Monticello</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trip_Area_Type_1__c</fullName>
        <label>Trip Area Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bureau of Land Management</fullName>
                </value>
                <value>
                    <fullName>Indian Reservation</fullName>
                </value>
                <value>
                    <fullName>Intl Peace Park</fullName>
                </value>
                <value>
                    <fullName>Island</fullName>
                </value>
                <value>
                    <fullName>Marine Sanctuary</fullName>
                </value>
                <value>
                    <fullName>National Battlefield</fullName>
                </value>
                <value>
                    <fullName>National Conservation Are</fullName>
                </value>
                <value>
                    <fullName>National Forest</fullName>
                </value>
                <value>
                    <fullName>National Historical Park</fullName>
                </value>
                <value>
                    <fullName>National Lakeshore</fullName>
                </value>
                <value>
                    <fullName>National Monument</fullName>
                </value>
                <value>
                    <fullName>National Park</fullName>
                </value>
                <value>
                    <fullName>National Preserve</fullName>
                </value>
                <value>
                    <fullName>National Recreation Area</fullName>
                </value>
                <value>
                    <fullName>National River</fullName>
                </value>
                <value>
                    <fullName>National Seashore</fullName>
                </value>
                <value>
                    <fullName>National Volcanic Park</fullName>
                </value>
                <value>
                    <fullName>National Wildlife Refuge</fullName>
                </value>
                <value>
                    <fullName>Natl Estuarine Research</fullName>
                </value>
                <value>
                    <fullName>Nat&apos;l Military Park</fullName>
                </value>
                <value>
                    <fullName>Natl Wild Scenic River</fullName>
                </value>
                <value>
                    <fullName>No Area Type</fullName>
                </value>
                <value>
                    <fullName>Parkway</fullName>
                </value>
                <value>
                    <fullName>Primitive Area</fullName>
                </value>
                <value>
                    <fullName>Provincial Park</fullName>
                </value>
                <value>
                    <fullName>Recreation Area</fullName>
                </value>
                <value>
                    <fullName>Sanctuary</fullName>
                </value>
                <value>
                    <fullName>State Forest</fullName>
                </value>
                <value>
                    <fullName>State Park</fullName>
                </value>
                <value>
                    <fullName>State Preserve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trip_Area_Type_2__c</fullName>
        <label>Trip Area Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bureau of Land Management</fullName>
                </value>
                <value>
                    <fullName>Indian Reservation</fullName>
                </value>
                <value>
                    <fullName>Intl Peace Park</fullName>
                </value>
                <value>
                    <fullName>Island</fullName>
                </value>
                <value>
                    <fullName>Marine Sanctuary</fullName>
                </value>
                <value>
                    <fullName>National Battlefield</fullName>
                </value>
                <value>
                    <fullName>National Conservation Are</fullName>
                </value>
                <value>
                    <fullName>National Forest</fullName>
                </value>
                <value>
                    <fullName>National Historical Park</fullName>
                </value>
                <value>
                    <fullName>National Lakeshore</fullName>
                </value>
                <value>
                    <fullName>National Monument</fullName>
                </value>
                <value>
                    <fullName>National Park</fullName>
                </value>
                <value>
                    <fullName>National Preserve</fullName>
                </value>
                <value>
                    <fullName>National Recreation Area</fullName>
                </value>
                <value>
                    <fullName>National River</fullName>
                </value>
                <value>
                    <fullName>National Seashore</fullName>
                </value>
                <value>
                    <fullName>National Volcanic Park</fullName>
                </value>
                <value>
                    <fullName>National Wildlife Refuge</fullName>
                </value>
                <value>
                    <fullName>Natl Estuarine Research</fullName>
                </value>
                <value>
                    <fullName>Nat&apos;l Military Park</fullName>
                </value>
                <value>
                    <fullName>Natl Wild Scenic River</fullName>
                </value>
                <value>
                    <fullName>No Area Type</fullName>
                </value>
                <value>
                    <fullName>Parkway</fullName>
                </value>
                <value>
                    <fullName>Primitive Area</fullName>
                </value>
                <value>
                    <fullName>Provincial Park</fullName>
                </value>
                <value>
                    <fullName>Recreation Area</fullName>
                </value>
                <value>
                    <fullName>Sanctuary</fullName>
                </value>
                <value>
                    <fullName>State Forest</fullName>
                </value>
                <value>
                    <fullName>State Park</fullName>
                </value>
                <value>
                    <fullName>State Preserve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trip_Begin__c</fullName>
        <label>Trip Begin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trip_End__c</fullName>
        <label>Trip End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trip_ID__c</fullName>
        <label>Trip ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trip_Location_Country__c</fullName>
        <label>Trip Location (Country)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABU DHABI</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>UNITED ARAB EMIRATES</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>AFRICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>NETHERLANDS ANTILLES</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARUSHA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ASCENSION ISLAND</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>AZORES</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BALEARIC</fullName>
                </value>
                <value>
                    <fullName>BARBUDA</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BURKINA FASO</fullName>
                </value>
                <value>
                    <fullName>BULGARIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trip_Location_State__c</fullName>
        <label>Trip Location (State)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KU</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trip_Name__c</fullName>
        <label>Trip Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trip_Price__c</fullName>
        <label>Trip Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trip_Type__c</fullName>
        <label>Trip Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alaska Backpack</fullName>
                </value>
                <value>
                    <fullName>Alaska Raft</fullName>
                </value>
                <value>
                    <fullName>Base Camp</fullName>
                </value>
                <value>
                    <fullName>Bicycle</fullName>
                </value>
                <value>
                    <fullName>Backpack</fullName>
                </value>
                <value>
                    <fullName>Burro</fullName>
                </value>
                <value>
                    <fullName>Canoe</fullName>
                </value>
                <value>
                    <fullName>High Sierra Backpack</fullName>
                </value>
                <value>
                    <fullName>Clair Tappaan Lodge</fullName>
                </value>
                <value>
                    <fullName>Donor</fullName>
                </value>
                <value>
                    <fullName>Dogsled</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Family Raft</fullName>
                </value>
                <value>
                    <fullName>Grandparent/Grandkids</fullName>
                </value>
                <value>
                    <fullName>Supported Trekking</fullName>
                </value>
                <value>
                    <fullName>Hut-to-Hut</fullName>
                </value>
                <value>
                    <fullName>Kayak</fullName>
                </value>
                <value>
                    <fullName>Lodge</fullName>
                </value>
                <value>
                    <fullName>Mountaineering</fullName>
                </value>
                <value>
                    <fullName>Multigenerational</fullName>
                </value>
                <value>
                    <fullName>Raft</fullName>
                </value>
                <value>
                    <fullName>Sailing</fullName>
                </value>
                <value>
                    <fullName>Scuba Diving</fullName>
                </value>
                <value>
                    <fullName>Snowshoeing</fullName>
                </value>
                <value>
                    <fullName>Ski</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Ski/Snowshoe</fullName>
                </value>
                <value>
                    <fullName>Teenage Backpack</fullName>
                </value>
                <value>
                    <fullName>Training Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reservation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Trip_Name__c</columns>
        <columns>Trip_Begin__c</columns>
        <columns>Trip_End__c</columns>
        <columns>Trip_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reservation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>